--- a/style.css
+++ b/style.css
@@ -36,7 +36,6 @@ span{
 .container-banner{
     width: 100%;
     height: 50vh;
-  
     background-image: url(img/img-fundo.jpg);
     background-size: cover;
     background-attachment: fixed;
@@ -44,8 +43,6 @@ span{
     display: flex;
     align-items: center;
     justify-content: center;
-    
-
 
 }
 .banner{
@@ -66,3 +63,112 @@ span{
 .banner p{
     font-size: 22px;
 }
+
+.container-bv{
+    width: 100%;
+    padding: 15px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+
+}
+
+.informacoes{
+    width: 580px;
+    height: 200px;
+    padding: 25px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+   justify-content: space-around;
+    
+}
+
+.quartos{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 80%;
+    flex-wrap: wrap;
+    gap: 15px;
+
+}
+.card-quartos{
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: 2px solid rgb(19, 196, 178);
+    
+    
+    
+
+
+}
+.card-quartos img{
+    width: 300px;
+}
+
+.card-quartos a{
+    color: black;
+    padding: 15px 0;
+}
+
+#rota{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0;
+}
+
+iframe{
+    width: 100%;
+}
+
+#sobre{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container-cards{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    
+
+}
+.card-sobre{
+    margin: 10px;
+    width: 500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 30px;
+    border: 2px solid black;
+    border-radius: 10px;
+    
+    
+}
+
+.card-info{
+    width: 60%;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.img-info{
+    width: 40%;
+
+}
+
+.card-sobre img{
+    width:70%;
+    height: 100px;
+}
+
+
