--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ iframe{
 }
 
 #sobre{
+    padding-bottom: 50px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -148,8 +149,8 @@ iframe{
     align-items: center;
     justify-content: space-between;
     gap: 30px;
-    border: 2px solid black;
-    border-radius: 10px;
+   
+   
     
     
 }
@@ -169,6 +170,46 @@ iframe{
 .card-sobre img{
     width:70%;
     height: 100px;
+}
+
+.container-rodape{
+    height: 100%;
+    width: 100%;
+    background-color:rgb(13, 161, 112);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    
+    
+}
+.contatos{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.233);
+    
+
+}
+.cards-contatos{
+    width: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    color: #fff;
+    
+
+}
+.cards-contatos a{
+    color:#fff;
+}
+.cards-contatos h2{
+    font-size: 18px;
+}
+.copy{
+    padding-top: 10px;
+    text-align: center;
+    color: #fff;
+   
 }
 
 
