--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 }
 
 .topo{
-    width: 100vw;
+    min-width: 375px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -191,6 +192,7 @@ iframe{
 
 }
 .cards-contatos{
+    max-width: 1024px;
     width: 200px;
     display: flex;
     align-items: center;
